# jax-gcm

./: .coveragerc  .coveragerc-pr  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_benchmarks.sh  speed_test.py
.github/workflows/: TEMP_regen_refs.yaml  build_docker_image.yaml  run_docs.yaml  run_test.yaml
benchmark_results/: jcm-bench-cpu-c4.json
deploy/k8s/: README.md  interactive-pod.yaml  job.yaml  pvc.yaml
docs/: echam_physics_perf_plan.md  generate_docs.py  icon_physics_perf_plan.md
docs/design/: composable_physics.md  operator_split_physics.md  writing_a_physics_scheme.md
docs/source/: api.rst  conf.py  design.rst  developer.rst  echam_physics.rst  getting_started.rst  index.rst  (+5 more)
jcm/: __init__.py  checkpoint.py  checkpoint_test.py  constants.py  date.py  date_test.py  diagnostics.py  diagnostics_test.py  diffusion.py  diffusion_test.py  forcing.py  forcing_test.py  geometry.py  main.py  model.py  model_test.py  nudging.py  nudging_test.py  ozone_climatology.py  ozone_climatology_test.py  physics_interface.py  physics_interface_hybrid_test.py  physics_interface_test.py  prescribed_state_model.py  prescribed_state_model_test.py  runners.py  runners_test.py  single_column_model.py  single_column_model_test.py  terrain.py  terrain_test.py  utils.py  utils_test.py
notebooks/: 01_jcm_demo.ipynb  02_optimization_example.ipynb  04_jcm_era5_example.ipynb  04_jcm_slides.ipynb  05_jcm_echam_demo.ipynb  05_jcm_icon_demo.ipynb  06_macv2_aerosols.py
utils/: analyze_moisture.py  convert_echam_bc.py  run_hs_90d.py  run_icon_longrun.py  run_icon_simulation.py  run_moisture_diag.py
validation/: emergent_climate_validation.py  test_emergent_properties.py
(+309 files in other folders)
