[build-system]
requires = ["setuptools>=40.4"]
build-backend = "setuptools.build_meta"

[project]
name = "jcm"
version = "2.0.0_beta"
dynamic = ["dependencies"]
description = "JAX-based General Circulation Model"
authors = [
    {email = "dwatsonparris@ucsd.edu"}
]
license = {text = "Apache"}
requires-python = ">=3.11"
keywords = ["climate", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools.packages.find]
include = ["jcm*"]
namespaces = true

[tool.setuptools.package-data]
jcm = [
    "config/**/*.yaml",
    "data/**/*.nc",
    "data/**/*.npy",
    "data/**/*.npz",
    "*.csv",
    "physics/speedy/*.csv",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
python_files = "*_test.py"
markers = [
    "slow: marks tests as slow (> 1 min, deselect with '-m \"not slow\"')",
]

[tool.ruff]
extend-select = ["D"]

[tool.ruff.lint]
ignore = [
    "D100", # missing public module docstrings
    "D101", # missing public class docstrings
    "D102", # missing public method docstrings
    "D103", # missing public function docstrings
    "D104", # missing public package docstrings
    "D205", # missing blank lines between summary line and description
    "D400", # first lines missing period
    "D415", # docstrings missing closing punctuation
    "D417", # missing argument descriptions
    "E731"
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F821", "F811"]
